--- a/docs/quickstart/react-native-quickstart.mdx
+++ b/docs/quickstart/react-native-quickstart.mdx
@@ -12,7 +12,7 @@ technology and streams and receives camera tracks.
 
 ![Finished app](./img/app.gif)
 
-You can check out the finished project [here](TODO).
+You can check out the finished project [here](https://github.com/graszka22/clients-docs).
 
 ## What do you need
 
