--- a/docs/quickstart/android-quickstart.mdx
+++ b/docs/quickstart/android-quickstart.mdx
@@ -111,7 +111,7 @@ project with empty Activity.
 Then, we'll replace the default app theme. Feel free to skip this step and style
 your components however you want, we just put them there for completness.
 
-```kt title=Color.kt
+```kotlin title=Color.kt
 package com.example.jellyfishdashboardandroid.ui.theme
 
 val seaBlue40 = Color(0xFFBFE7F8)
@@ -121,7 +121,7 @@ val white = Color(0xFFFFFFFF)
 val darkText = Color(0xFF001A72)
 ```
 
-```kt title=Theme.kt
+```kotlin title=Theme.kt
 package com.example.jellyfishdashboardandroid.ui.theme
 
 private val LightColorScheme = lightColorScheme(
@@ -142,7 +142,7 @@ fun JellyfishDashboardAndroidTheme(
 }
 ```
 
-```kt title=Type.kt
+```kotlin title=Type.kt
 package com.example.jellyfishdashboardandroid.ui.theme
 
 val Typography = Typography(
@@ -167,13 +167,13 @@ Our app will contain one activity: we'll leave it named `MainActivity` at it
 should be already created by Android Studio. This activity will be paired with
 one `ViewModel`, we'll name it `MainViewModel`:
 
-```kt title=MainViewModel.kt
+```kotlin title=MainViewModel.kt
 class MainViewModel(application: Application) : AndroidViewModel(application) {
 
 }
 ```
 
-```kt title=MainActivity.kt
+```kotlin title=MainActivity.kt
 class MainActivity : ComponentActivity() {
     private val viewModel: MainViewModel by viewModels()
 
@@ -199,7 +199,7 @@ just for convenience.
 
 Firstly, we need to store the peer token somewhere in the ViewModel:
 
-```kt MainViewModel.kt
+```kotlin MainViewModel.kt
 class MainViewModel(application: Application) : AndroidViewModel(application) {
     val peerToken = MutableStateFlow("")
 }
@@ -207,7 +207,7 @@ class MainViewModel(application: Application) : AndroidViewModel(application) {
 
 Then we'll add code for the UI:
 
-```kt MainActivity.kt
+```kotlin MainActivity.kt
 class MainActivity : ComponentActivity() {
     //...
 
@@ -272,7 +272,7 @@ implementation 'com.google.android.gms:play-services-code-scanner:16.1.0'
 
 Then scan the code like this:
 
-```kt title=MainActivity.kt
+```kotlin title=MainActivity.kt
 class MainActivity : ComponentActivity() {
     //...
 
@@ -316,7 +316,7 @@ If we don't have camera permission yet, we'll display "Request permissions"
 button, instead of "Connect" button. The button requests camera permissions. If
 the permission is granted, we'll display "Connect" button instead:
 
-```kt title=MainActivity.kt
+```kotlin title=MainActivity.kt
     // highlight-start
     @OptIn(ExperimentalPermissionsApi::class)
     @Composable
@@ -365,3 +365,401 @@ the permission is granted, we'll display "Connect" button instead:
         }
     }
 ```
+
+### Connecting to the backend
+
+Finally we can write code to actually connect to the backend. It will be the
+responsibility of the `MainViewModel`.
+
+Firstly, create `JellyfishClient`:
+
+```kotlin title=MainViewModel.kt
+class MainViewModel(application: Application) : AndroidViewModel(application) {
+    //...
+    // highlight-next-line
+    private val client = JellyfishClient(getApplication(), this)
+}
+```
+
+Then write the `connect()` function:
+
+```kotlin title=MainViewModel.kt
+class MainViewModel(application: Application) : AndroidViewModel(application) {
+    //...
+    // highlight-start
+    fun connect() {
+        client.connect(
+            Config(
+                websocketUrl = "ws://192.168.0.1:4000/socket/peer/websocket",
+                token = peerToken.value,
+            ),
+        )
+    }
+    // highlight-end
+}
+```
+
+the `websocketUrl` is the url of Jellyfish backend, be sure to change it to your
+local backend. Also we strongly recommend storing it for example as an
+environment variable.
+
+The `token` is the peer token provided by the user. It's used to determine the
+user and the room to be connected to.
+
+Now we have to get the answer from the backend that we're connected
+successfully. To do this we need to implement the `JellyfishClientListener`
+interface.
+
+Firstly we'll implement `onAuthSuccess()` and `onAuthError()` callbacks.
+
+`onAuthSuccess()` is called when the user is authenticated successfully and can
+set up tracks to stream and join the room. So we'll do so:
+
+```kotlin title=MainViewModel.kt
+class MainViewModel(application: Application) : AndroidViewModel(application),
+// highlight-next-line
+    JellyfishClientListener {
+
+    // ...
+
+// highlight-next-line
+    private var localVideoTrack: LocalVideoTrack? = null
+
+    // highlight-start
+    private fun setupTracks() {
+        val videoParameters = VideoParameters.presetHD169
+        localVideoTrack = client.createVideoTrack(videoParameters, emptyMap())
+    }
+
+    override fun onAuthSuccess() {
+        setupTracks()
+        client.join()
+    }
+
+
+    // highlight-end
+}
+```
+
+In `setupTracks()` function we set up a local video track to stream. We use a
+preset with reasonable defaults, but there are many settings you can customize
+(resolution, bandwidth, simulcast etc.). The local video track streams the local
+device camera. You can also set up an audio track, but for the purposes of this
+tutorial we omitted it.
+
+Then in `onAuthSuccess()` after setting up tracks we join the room. When user
+joins the room, the user is able to receive tracks from other peers and
+vice-versa.
+
+Don't forget to implement also `onAuthError()` function - it's called when the
+authentication failed and you should handle it by for example informing the user
+that something went wrong.
+
+Backend informs us that user succesfully joined the room in `onJoined` callback.
+In `onJoined` callback we also receive information about other peers in the room
+and local user id. We're going to store information about peers in `MainViewModel`:
+
+```kotlin title=MainViewModel.kt
+class MainViewModel(application: Application) : AndroidViewModel(application),
+    JellyfishClientListener {
+    // ...
+    val participants = MutableStateFlow<List<Participant>>(emptyList())
+    val isConnected = MutableStateFlow(false)
+
+    private val mutableParticipants = HashMap<String, Participant>()
+
+    // ...
+
+     override fun onJoined(peerID: String, peersInRoom: List<Peer>) {
+        peersInRoom.forEach {
+            mutableParticipants[it.id] = Participant(
+                it.id,
+            )
+        }
+        isConnected.value = true
+        emitParticipants()
+    }
+
+    private fun emitParticipants() {
+        participants.value =
+            mutableParticipants.values.filter { p -> p.videoTrackContext != null }.toList()
+    }
+}
+```
+
+`participants` and `isConnected` are state variables that are exposed to the UI
+(`MainActivity`). `participants` stores current peers and updates when peers are
+added or removed. `isConnected` stores whether the app is connected to the
+server or not. If it's connected we'll display a screen displaying participants.
+
+In `onJoined` callback we add participants that are currently in the room and
+update the UI accordingly.
+
+Remember to also implement `onJoinError` callback, just like `onAuthError`.
+
+With this you should be able to connect to the server now. Scan the QR code and
+connect, and in the dashboard you should be able to see video from the camera
+on your mobile device.
+
+## Room screen
+
+Now we need an UI to display other participants. Jellyfish Client provides a
+component for that: `VideoTextureViewRenderer`. Because we're using Jetpack
+Compose and this is just regular Android `View`, we're going to wrap it using
+`AndroidView` Composable. Also we'll need to avoid memory leaks by releasing the
+view when necessary.
+
+// TODO: to jest głupie ze user musi się tym zajmować zeby ustawić renderer i
+jeszcze zwalnianiem tego, user powinien móc po prostu dać video tracka do tego
+view i wszystko
+
+```kotlin title=MainActivity.kt
+
+    @Composable
+    fun ParticipantVideoView(participant: Participant, modifier: Modifier = Modifier) {
+        var activeVideoTrack: VideoTrack? by remember { mutableStateOf(null) }
+        var view: VideoTextureViewRenderer? by remember { mutableStateOf(null) }
+
+        // set the renderer of the track when the view is initialized or updated
+        fun setupTrack(videoTrack: VideoTrack, view: VideoTextureViewRenderer) {
+            if (activeVideoTrack == videoTrack) return
+
+            activeVideoTrack?.removeRenderer(view)
+            videoTrack.addRenderer(view)
+            activeVideoTrack = videoTrack
+        }
+
+        // remove the renderer from the track if the track has changed
+        DisposableEffect(participant.videoTrackContext?.track) {
+            onDispose {
+                view?.let {
+                    (participant.videoTrackContext?.track as VideoTrack).removeRenderer(it)
+                }
+            }
+        }
+
+        // release the view if the view is removed
+        DisposableEffect(currentCompositeKeyHash.toString()) {
+            onDispose {
+                view?.release()
+            }
+        }
+
+        AndroidView(
+            factory = { context ->
+                VideoTextureViewRenderer(context).apply {
+                    // init the VideoTextureViewRenderer with participant's video track
+                    this.init((participant.videoTrackContext?.track as VideoTrack).eglContext, null)
+                    setupTrack((participant.videoTrackContext.track as VideoTrack), this)
+                    view = this
+                }
+            },
+            update = { updatedView ->
+                setupTrack((participant.videoTrackContext?.track as VideoTrack), updatedView)
+            },
+            modifier = modifier,
+        )
+    }
+```
+
+Then we'll use the `ParticipantVideoView` to display participants in a grid (using `LazyVerticalGrid`):
+
+```kotlin title=MainActivity.kt
+
+    @Composable
+    fun RoomScreen() {
+        val participants = viewModel.participants.collectAsState()
+
+        Column(
+            modifier = Modifier
+                .fillMaxWidth()
+                .fillMaxHeight()
+                .padding(10.dp),
+            verticalArrangement = Arrangement.SpaceBetween,
+            horizontalAlignment = Alignment.CenterHorizontally,
+        ) {
+            LazyVerticalGrid(
+                columns = GridCells.Fixed(if (participants.value.count() > 2) 2 else 1),
+                verticalArrangement = Arrangement.spacedBy(
+                    16.dp,
+                    alignment = Alignment.CenterVertically
+                ),
+                horizontalArrangement = Arrangement.spacedBy(
+                    16.dp,
+                    alignment = Alignment.CenterHorizontally
+                )
+            ) {
+                items(participants.value.count()) {
+                    ParticipantVideoView(
+                        participant = participants.value[it],
+                        modifier = Modifier
+                            .clip(RoundedCornerShape(10.dp))
+                            .aspectRatio(1.0f, matchHeightConstraintsFirst = true)
+                            .fillMaxWidth()
+                            .fillMaxHeight(),
+                    )
+                }
+            }
+        }
+    }
+```
+
+To display the Room screen we just need to modify the `onCreate` method in
+`MainActivity`. If we're connected, we display the Room screen, otherwise the
+Connect screen.
+
+```kotlin title=MainActivity.kt
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContent {
+            // highlight-next-line
+            val isConnected = viewModel.isConnected.collectAsState()
+
+            JellyfishDashboardAndroidTheme {
+                // A surface container using the 'background' color from the theme
+                Surface(
+                    modifier = Modifier.fillMaxSize(), color = MaterialTheme.colorScheme.background
+                ) {
+                    // highlight-start
+                    if (isConnected.value) {
+                        RoomScreen()
+                    } else {
+                        ConnectContent()
+                    }
+                    // highlight-end
+                }
+            }
+        }
+    }
+```
+
+### Adding / removing peers and tracks
+
+If you run the app, you'll see that nothing happens if a new participant joins the room. We have to handle this by implementing some more methods from the `JellyfishClientListener` interface:
+
+```kotlin title=MainViewModel.kt
+class MainViewModel(application: Application) : AndroidViewModel(application),
+    JellyfishClientListener {
+
+    //...
+
+    override fun onPeerJoined(peer: Peer) {
+        mutableParticipants[peer.id] = Participant(
+            id = peer.id,
+        )
+        emitParticipants()
+    }
+
+    override fun onPeerLeft(peer: Peer) {
+        mutableParticipants.remove(peer.id)
+        emitParticipants()
+    }
+
+    override fun onTrackReady(ctx: TrackContext) {
+        val participant = mutableParticipants[ctx.endpoint.id] ?: return
+
+        val (id, newParticipant) = when (ctx.track) {
+            is RemoteVideoTrack -> {
+                val p = participant.copy(videoTrackContext = ctx)
+                Pair(ctx.endpoint.id, p)
+            }
+            else ->
+                throw IllegalArgumentException("invalid type of incoming remote track")
+        }
+        mutableParticipants[id] = newParticipant
+        emitParticipants()
+    }
+
+    override fun onTrackRemoved(ctx: TrackContext) {
+        val participant = mutableParticipants[ctx.endpoint.id] ?: return
+        val videoTrackId = participant.videoTrackContext?.trackId ?: return
+
+        val newParticipant = if (ctx.trackId == videoTrackId) {
+            participant.copy(videoTrackContext = null)
+        } else {
+            throw IllegalArgumentException("track has not been found for given endpoint")
+        }
+
+        mutableParticipants[ctx.endpoint.id] = newParticipant
+        emitParticipants()
+    }
+}
+```
+
+Those methods are rather self-explanatory: `onPeerJoined()` is called when
+someone joins the room, `onPeerLeft()` is called when someone leaves the room.
+Similarly, `onTrackReady()` is called when a track is ready to display and
+`onTrackRemoved()` is called when a track is no longer streamed. One peer can
+have multiple tracks (also multiple video tracks!), but for this tutorial we'll
+assume it's always one video track.
+
+### Gracefully leaving the room
+
+To leave a rooom we'll add a button for the user. When user clicks it, we
+gracefully leave the room, close the server connection and go back to the
+Connect screen.
+
+```kotlin title=MainActivity.kt
+    @Composable
+    fun RoomScreen() {
+        val participants = viewModel.participants.collectAsState()
+
+        Column(
+            // ...
+        ) {
+            LazyVerticalGrid(
+               // ...
+            ) {
+             // ...
+            }
+            // highlight-start
+            Button(
+                onClick = {
+                    viewModel.disconnect()
+                },
+
+                ) {
+                Text("Disconnect")
+            }
+            // highlight-end
+        }
+    }
+```
+
+And in `MainViewModel` we'll add `disconnect()` function:
+
+```kotlin title=MainViewModel.kt
+class MainViewModel(application: Application) : AndroidViewModel(application),
+    JellyfishClientListener {
+
+    // ...
+
+    fun disconnect() {
+        localVideoTrack?.stop()
+        localVideoTrack = null
+        client.cleanUp()
+        isConnected.value = false
+    }
+}
+```
+
+## Summary
+
+Congrats on finishing your first Jellyfish mobile application! In this tutorial
+you've learned how to make a basic Jellyfish client application that streams and
+receives video tracks with WebRTC technology.
+
+But this was just the beginning. Jellyfish Client supports much more than just
+streaming camera: it can also stream audio, screencast your device's screen,
+configure your camera and audio devices, detect voice activity, control
+simulcast, bandwidth and encoding settings, show camera preview, display WebRTC
+stats and more to come. Check out our other tutorials to learn about those
+features.
+
+You can also take a look at our fully featured [Videoroom Demo
+example](https://github.com/jellyfish-dev/react-native-membrane-webrtc/tree/master/example):
+
+![Videoroom Demo](./img/videoroom.gif)
+
+It's in React Native, but actually React Native SDK uses Android SDK under the hood!
