--- a/docs/quickstart/android-quickstart.mdx
+++ b/docs/quickstart/android-quickstart.mdx
@@ -703,7 +703,7 @@ Connect screen.
     }
 ```
 
-And in `MainViewModel` we'll add `disconnect()` function:
+And in `MainViewModel` we'll add the `disconnect()` function:
 
 ```kotlin title=MainViewModel.kt
 class MainViewModel(application: Application) : AndroidViewModel(application),
