--- a/docs/quickstart/ios-quickstart.mdx
+++ b/docs/quickstart/ios-quickstart.mdx
@@ -43,8 +43,6 @@ Go to `File` -> `Add packages` and enter package github repo url (`https://githu
 
 <StartingJellyfishDashboard />
 
-// TODO nie wiem jak to ostatecznie bedzie wyglądać
-
 ## Connecting to the server and joining the room
 
 Our app will consist of two screens. The first one allows user to type, paste or
@@ -65,18 +63,33 @@ your components however you want, we just put them there for completness.
 ```swift title=Theme.swift
 import SwiftUI
 
-struct ButtonStyle: ViewModifier {
+let seaBlue40 = Color(red:0.749, green:0.906, blue:0.973)
+let seaBlue20 = Color(red:0.945, green:0.98, blue:0.996)
+let darkBlue100 = Color(red:0, green:0.102, blue:0.447)
+let darkText = Color(red:0, green:0.102, blue:0.447)
 
+struct ButtonStyle: ViewModifier {
   func body(content: Content) -> some View {
     content.padding()
       .frame(maxWidth: .infinity)
-      .background(Color(red: 0, green: 0.102, blue: 0.447))
+      .background(darkBlue100)
       .foregroundColor(.white)
       .cornerRadius(100)
-
   }
 }
 
+struct TextFieldStyle: ViewModifier {
+  func body(content: Content) -> some View {
+    content.padding()
+      .foregroundColor(.black)
+      .background(.white)
+      .cornerRadius(100)
+      .overlay(
+        RoundedRectangle(cornerRadius: 100)
+          .stroke(darkBlue100, lineWidth: 2)
+      )
+  }
+}
 ```
 
 Of course your app might be a lot more complicated and use a different
@@ -100,6 +113,7 @@ struct ConnectScreen: View {
   var body: some View {
     VStack {
       TextField("Enter peer token...", text: $peerToken)
+        .modifier(TextFieldStyle())
 
       Button(action: {
         // added later
@@ -114,7 +128,7 @@ struct ConnectScreen: View {
     }
     .padding(10)
     .frame(maxWidth: .infinity, maxHeight: .infinity)
-    .background(Color(red:0.749, green:0.906, blue:0.973))
+    .background(seaBlue40)
   }
 }
 ```
@@ -385,6 +399,7 @@ class ContentViewController: ObservableObject, JellyfishClientListener {
 
   // ...
 
+ // highlight-start
   func onJoined(peerID: String, peersInRoom: [Peer]) {
     peersInRoom.forEach { peer in mutableParticipants[peer.id] = Participant(id: peer.id)}
     DispatchQueue.main.async {
@@ -395,6 +410,7 @@ class ContentViewController: ObservableObject, JellyfishClientListener {
 
   func onJoinError(metadata _: Any) {
   }
+  // highlight-end
 }
 ```
 
@@ -412,3 +428,146 @@ connect, and in the dashboard you should be able to see video from the camera
 on your mobile device.
 
 ## Room screen
+
+Now we need an UI to display other participants. Jellyfish Client provides a
+component for that: `SwiftUIVideoView`.
+
+:::info
+
+`SwiftUIVideoView` is a wrapper around Jellyfish Client's `VideoView`. So if
+you're not using Swift UI you can use `VideoView`.
+
+:::
+
+```swift title=ContentView.swift
+struct RoomScreen: View {
+  @ObservedObject var contentViewController: ContentViewController
+
+  var body: some View {
+    VStack {
+      ForEach(contentViewController.participants) { participant in
+        SwiftUIVideoView((participant.videoTrackContext?.track as? VideoTrack)!)
+          .aspectRatio(CGSize(width: 1, height: 1), contentMode: .fit)
+          .cornerRadius(20)
+      }
+    }
+    .padding(10)
+    .frame(maxWidth: .infinity, maxHeight: .infinity)
+    .background(seaBlue20)
+  }
+}
+```
+
+### Adding / removing peers and tracks
+
+If you run the app, you'll see that nothing happens if a new participant joins
+the room. We have to handle this by implementing some more methods from the
+`JellyfishClientListener` protocol:
+
+```swift title=ContentViewController.swift
+class ContentViewController: ObservableObject, JellyfishClientListener {
+  // ...
+
+  func onPeerJoined(peer: Peer) {
+    mutableParticipants[peer.id] = Participant(id: peer.id)
+    emitParticipants()
+  }
+
+  func onPeerLeft(peer: Peer) {
+    mutableParticipants.removeValue(forKey: peer.id)
+    emitParticipants()
+  }
+
+  func onTrackReady(ctx: TrackContext) {
+    guard let participant = mutableParticipants[ctx.peer.id] else {
+      return
+    }
+
+    participant.videoTrackContext = ctx
+
+    mutableParticipants[ctx.peer.id] = participant
+
+    emitParticipants()
+  }
+
+  func onTrackRemoved(ctx: TrackContext) {
+    guard let participant = mutableParticipants[ctx.peer.id],
+          let _ = participant.videoTrackContext?.trackId else {
+      return
+    }
+
+    participant.videoTrackContext = nil
+
+    mutableParticipants[ctx.peer.id] = participant
+    emitParticipants()
+  }
+}
+```
+
+Those methods are rather self-explanatory: `onPeerJoined()` is called when
+someone joins the room, `onPeerLeft()` is called when someone leaves the room.
+Similarly, `onTrackReady()` is called when a track is ready to display and
+`onTrackRemoved()` is called when a track is no longer streamed.
+
+### Gracefully leaving the room
+
+To leave a rooom we'll add a button for the user. When user clicks it, we
+gracefully leave the room, close the server connection and go back to the
+Connect screen.
+
+```swift title=ContentView.swift
+struct RoomScreen: View {
+  // ...
+
+  var body: some View {
+    VStack {
+      // ...
+      // highlight-start
+      Spacer()
+      Button(action: {
+        contentViewController.disconnect()
+      }) {
+        Text("Disconnect").modifier(ButtonStyle())
+      }
+      // highlight-end
+    }
+    // ...
+  }
+}
+```
+
+And in `ContentViewController` we'll add the`disconnect()` function:
+
+```swift title=ContentViewController.swift
+class ContentViewController: ObservableObject, JellyfishClientListener {
+  // ...
+  // highlight-start
+  public func disconnect() {
+    jellyfishClient?.cleanUp()
+    DispatchQueue.main.async {
+      self.isConnected = false
+    }
+  }
+  // highlight-end
+}
+```
+
+## Summary
+
+Congrats on finishing your first Jellyfish mobile application! In this tutorial
+you've learned how to make a basic Jellyfish client application that streams and
+receives video tracks with WebRTC technology.
+
+But this was just the beginning. Jellyfish Client supports much more than just
+streaming camera: it can also stream audio, screencast your device's screen,
+configure your camera and audio devices, detect voice activity, control
+simulcast, bandwidth and encoding settings, show camera preview, display WebRTC
+stats and more to come. Check out our other tutorials to learn about those
+features.
+
+You can also take a look at our fully featured [Videoroom Demo
+example](https://github.com/jellyfish-dev/react-native-membrane-webrtc/tree/master/example):
+
+![Videoroom Demo](./img/videoroom.gif)
+
+It's in React Native, but actually React Native SDK uses iOS SDK under the hood!
